# Renderer

./: CMakeLists.txt  LICENSE  README.md  Triangle.hpp
models/export3dcoat/source/: export3dcoat.mtl
src/: AABB.hpp  BVH.hpp  CMakeLists.txt  Camera.hpp  Color.hpp  ConstantMedium.hpp  Hittable.hpp  HittableList.hpp  Material.hpp  Ray.hpp  Sphere.hpp  Texture.hpp  Vector.hpp  aabb.h  bound.h  bvh.h  camera.h  color.h  constant_medium.h  global.h  global.hpp  global_stb_image.h  hittable.h  hittable_list.h  main.cpp  material.h  moving_sphere.h  ray.h  scenes.txt  sphere.h  texture.h  vec3.h  vector.h
src/accelerator/: aabb.h
src/accelerators/: aabb.h  bvh.h
src/core/: aabb.h  aarect.h  box.h  bsdf.cpp  bsdf.h  bvh.h  bxdf.h  camera.h  color.h  envmap.h  global.h  global_stb_image.h  hittable.h  hittable_list.h  integrator.cpp  integrator.h  light.cpp  light.h  main.cpp  material.h  medium.cpp  medium.h  mesh_triangle.h  microfacet.cpp  microfacet.h  object.h  onb.h  pdf.h  perlin.h  ray.h  record.h  renderer.cpp  renderer.h  sampler.h  scene.cpp  scene.h  spectrum.cpp  spectrum.h  sphere.h  texture.h  (+6 more)
src/integrator/: PTintegrator.cpp  PTintegrator.h  VPTintegrator.h
src/integrators/: path.cpp  path.h  volpath.cpp  volpath.h  whitted.cpp  whitted.h
src/light/: envmap.h
src/lights/: diffuse.cpp  diffuse.h  point.cpp  point.h
src/main/: main.cpp
src/material/: perlin.h
src/materials/: glass.cpp  glass.h  matte.cpp  matte.h  metal.cpp  metal.h  perlin.h  plastic.cpp  plastic.h
src/medium/: grid.cpp  grid.h  homogeneous.cpp  homogeneous.h
src/shape/: aarect.h  sphere.h
src/shapes/: aarect.h  box.h  sphere.h  triangle.cpp  triangle.h
src/temporarily useless/: pdf.h
